--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,8 @@
   margin: 0;
   padding: 0;
 }
-html,body,#root{
-  width: 100%;
-  height: 100%;
+body{
+  background: #E9EAED;
 }
 body {
   margin: 0;
@@ -17,6 +16,11 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+ul,ul>li,h6{
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 @import '~antd/dist/antd.css';
 
